<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-4dp"
    tools:layout_editor_absoluteY="0dp">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="84dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="84dp"
        android:text="@string/sure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/name"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:autofillHints="productName"
        android:hint="@string/write_your_shop_item_name_here"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_item_name" />

    <TextView
        android:id="@+id/shop_item_name"
        android:layout_width="153dp"
        android:layout_height="22dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/write_your_shop_item_name"
        android:text="@string/write_your_shop_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/max_count"
        android:layout_width="299dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:autofillHints="none"
        android:ems="10"
        android:hint="@string/write_your_count_here"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_max_count" />

    <TextView
        android:id="@+id/task_max_count"
        android:layout_width="159dp"
        android:layout_height="23dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="260dp"
        android:contentDescription="@string/write_your_count"
        android:text="@string/write_your_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/price"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:autofillHints="none"
        android:ems="10"
        android:hint="@string/write_your_shop_item_price_here"
        android:inputType="numberSigned|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_item_price" />

    <TextView
        android:id="@+id/shop_item_price"
        android:layout_width="152dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="420dp"
        android:contentDescription="@string/write_your_shop_item_price"
        android:text="@string/write_your_shop_item_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>